--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="c:\Users\Luisa\OneDrive\Pictures\Senior Pic.jpg" class="img-fluid" alt="me">
+          <img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\me.jpg" class="img-fluid" alt="me">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Senior seeking to obtain a Software Development internship with a company that will offer me 
@@ -217,7 +217,7 @@
             </div>
 
           <div class="col-sm">
-            <img src="C:\Users\Luisa\Downloads\ucfptb-removebg-preview.png" alt="UCF" height="200" width="200" style="margin-top:30px;" >
+            <img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\education\ucf.png" alt="UCF" height="200" width="200" style="margin-top:30px;" >
           </div>
 
         </div>
@@ -236,7 +236,7 @@
           </div>
 
           <div class="col-sm">
-            <img src="C:\Users\Luisa\Downloads\pbsctb-removebg-preview.png" alt="PBSC" height="200" width="200" style="position:absolute; top:30px; margin-left:25px;" >
+            <img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\education\pbsc.png" alt="PBSC" height="200" width="200" style="position:absolute; top:30px; margin-left:25px;" >
           </div>
 
         </div>
@@ -321,11 +321,11 @@
           </div>
 
           <div class="col d-flex justify-content-center portfolio-item filter-app">
-            <p><a href="https://github.com/luisaM735/Calculator"><img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\rajaprerak.github.io\assets\img\project\calc.png" alt="calculator" style="width:300px; height:200px; float:none;"></a></p>
+            <p><a href="https://github.com/luisaM735/Calculator"><img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\project\calc.png" alt="calculator" style="width:300px; height:200px; float:none;"></a></p>
           </div>
 
           <div class="col d-flex justify-content-center portfolio-item filter-app">
-            <p><a href="https://github.com/luisaM735/Weather-Forecast"><img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\rajaprerak.github.io\assets\img\project\forecast.jpg" alt="weather" style="width:300px; height:200px; float:none;"></a></p>
+            <p><a href="https://github.com/luisaM735/Weather-Forecast"><img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\project\forecast.jpg" alt="weather" style="width:300px; height:200px; float:none;"></a></p>
           </div>
 
       </div>
