--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="C:\Users\Luisa\OneDrive\Documents\GitHub\Portfolio\luisaM735.github.io\luisaM735.github.io\assets\img\me.jpg" class="img-fluid" alt="me">
+          <img src="https://media.licdn.com/dms/image/D5603AQEjWkAOXZXgKw/profile-displayphoto-shrink_800_800/0/1671047387067?e=1714003200&v=beta&t=2mET5TxjWZemQJ9PSHz98upZV8yXBGBsS-Ffhe-aoew" class="img-fluid" alt="me">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Senior seeking to obtain a Software Development internship with a company that will offer me 
